; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd.c_gd_stderr_error.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd.c_gd_stderr_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"GD Error: \00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"GD Warning: \00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"GD Notice: \00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"GD Info: \00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"GD Debug: \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gd_stderr_error(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %23 [
    i32 131, label %8
    i32 128, label %11
    i32 129, label %14
    i32 130, label %17
    i32 132, label %20
  ]

8:                                                ; preds = %3
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fputs(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %23

11:                                               ; preds = %3
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @fputs(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  br label %23

14:                                               ; preds = %3
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fputs(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %15)
  br label %23

17:                                               ; preds = %3
  %18 = load i32, i32* @stderr, align 4
  %19 = call i32 @fputs(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 %18)
  br label %23

20:                                               ; preds = %3
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 @fputs(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %3, %20, %17, %14, %11, %8
  %24 = load i32, i32* @stderr, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @vfprintf(i32 %24, i8* %25, i32 %26)
  %28 = load i32, i32* @stderr, align 4
  %29 = call i32 @fflush(i32 %28)
  ret void
}

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @vfprintf(i32, i8*, i32) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
